# Billwise

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts
.github/workflows/: release.yml
docs/: milestones.md  product-brief.md  technical-implementation.md
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_initial_schema.sql
src-tauri/src/: main.rs
src/components/common/: NumberField.tsx  PageHeader.tsx  StatusBadge.tsx
src/components/layout/: AppShell.tsx  Sidebar.tsx
src/lib/: formatters.ts  tauri.ts
src/routes/: BackupPage.tsx  CustomersPage.tsx  DashboardPage.tsx  InvoicePreviewPage.tsx  InvoicesPage.tsx  PaymentsPage.tsx  ProductsPage.tsx  ReportsPage.tsx  SettingsPage.tsx
src/types/: index.ts
