[package]
name = "billwise"
version = "0.1.0"
description = "Offline-first desktop invoicing for small businesses"
authors = ["Billwise"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.5", features = ["protocol-asset"] }
thiserror = "2"
